# LegacyLens

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  requirements-deps-only.txt  requirements.txt  setup.cfg
.streamlit/: config.toml
docs/: AI_Cost_Analysis.md  G4-Week-3-LegacyLens.md  LegacyLens_PRD.md  LegacyLens_PreSearch.md  RAG_Architecture_Doc.md
eval/: golden_data.yaml  run_eval.py
legacylens/: __init__.py
legacylens/api/: __init__.py  main.py
legacylens/config/: __init__.py  constants.py
legacylens/features/: __init__.py  business_logic_extractor.py  code_explainer.py  dependency_mapper.py  doc_generator.py
legacylens/generation/: __init__.py  answer_generator.py
legacylens/ingestion/: __init__.py  chunker.py  embedder.py  file_discovery.py  preprocessor.py  reference_scraper.py  runner.py
legacylens/retrieval/: __init__.py  context_assembler.py  query_processor.py  reranker.py  searcher.py  vector_store.py
legacylens/ui/: __init__.py  (+1 more)
scripts/: README.md  capture_retrieval_results.py  clear_chromadb.py  run_ingestion.py  run_streamlit.sh  run_ui_railway.sh
tests/: __init__.py  test_answer_generator.py  test_api.py  test_business_logic_extractor.py  test_chunker.py  test_code_explainer.py  test_constants.py  test_context_assembler.py  test_dependency_mapper.py  test_doc_generator.py  test_embedder.py  test_file_discovery.py  test_preprocessor.py  test_program_aware_search.py  test_query_processor.py  test_query_router.py  test_reference_scraper.py  test_reranker.py  test_searcher.py  test_ui_app.py  test_vector_store.py
(+103 files in other folders)
